Dependency injection with system property.

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,24 @@
 plugins {
     id 'java'
     id "io.franzbecker.gradle-lombok" version "1.11"
+    id 'application'
 }
 
 group 'uj.jwzp.w4'
 version '1.0-SNAPSHOT'
+
+mainClassName = "uj.jwzp.w4.launchers.SpringMain"
+
+jar {
+    manifest {
+        attributes("Implementation-Title": project.name,
+                "Main-Class": mainClassName)
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
 
 repositories {
     mavenCentral()
@@ -17,5 +31,4 @@ dependencies {
     compile 'io.vavr:vavr:0.9.2'
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'org.springframework:spring-context:5.0.4.RELEASE'
-
 }
